--- a/100daysCss/2-MenuIcon/index.html
+++ b/100daysCss/2-MenuIcon/index.html
@@ -10,9 +10,9 @@
         <section class="frame">
             <div class="container">
                 <div class="menu-icon">
-                    <span class="line-one"></span>
-                    <span class="line-two"></span>
-                    <span class="line-three"></span>
+                    <span class="line line-one"></span>
+                    <span class="line line-two"></span>
+                    <span class="line line-three"></span>
                 </div>
             </div>
         </section>
